bpo-28856: Let %b format for bytes support objects that follow the buffer protocol  (GH-664)